--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,8 +8,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: #082032;
-  color: white;
+  color: black;
 }
 
 a {
